# amortissement_windows_version

./: .gitignore.save  CMakeCache.txt  CMakeLists.txt  appveyor.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
database/: amortissement.db
head/: amortissement_degressif.h  amortissement_lineaire.h  db_manager.h  materiel.h
icons/: img.qrc
source/: amortissement_degressif.cpp  amortissement_lineaire.cpp  db_manager.cpp  materiel.cpp
